--- a/reviews.html
+++ b/reviews.html
@@ -536,7 +536,7 @@
                             <ul role="list" class="t450__list t-menu__list">
                                 <li class="t450__list_item"
                                 ><a class="t-menu__link-item "
-                                    href="/" data-menu-submenu-hook="" data-menu-item-number="1"
+                                    href="index.html" data-menu-submenu-hook="" data-menu-item-number="1"
                                     style="color:#ffffff;font-size:24px;">Главная</a></li>
                                 <li class="t450__list_item"
                                 ><a class="t-menu__link-item "
