--- a/rooms.html
+++ b/rooms.html
@@ -861,7 +861,7 @@
                                                 платно</sup></div>
                                         </div>
                                         <div class="t694__button-container">
-                                            <div class="t-card__btn-wrapper"><a href="/room1" class="t-card__link">
+                                            <div class="t-card__btn-wrapper"><a href="room1.html" class="t-card__link">
                                                 <div class="t-card__btn t-btn t-btn_sm"
                                                      style="color:#000000;background-color:#ffffff;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                                                     Подробнее
@@ -898,7 +898,7 @@
                                             </div>
                                         </div>
                                         <div class="t694__button-container">
-                                            <div class="t-card__btn-wrapper"><a href="/room2" class="t-card__link">
+                                            <div class="t-card__btn-wrapper"><a href="room2.html" class="t-card__link">
                                                 <div class="t-card__btn t-btn t-btn_sm"
                                                      style="color:#000000;background-color:#ffffff;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                                                     Подробнее
@@ -935,7 +935,7 @@
                                             </div>
                                         </div>
                                         <div class="t694__button-container">
-                                            <div class="t-card__btn-wrapper"><a href="/room3" class="t-card__link">
+                                            <div class="t-card__btn-wrapper"><a href="room3.html" class="t-card__link">
                                                 <div class="t-card__btn t-btn t-btn_sm"
                                                      style="color:#000000;background-color:#ffffff;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                                                     Подробнее
