--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--metatextblock--><title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--metatextblock--><title>Domiki</title>
     <meta property="og:url" content="http://zeleniydomiki.tilda.ws"/>
-    <meta property="og:title" content="Home"/>
+    <meta property="og:title" content="Domiki"/>
     <meta property="og:description" content=""/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="images/tild6666-3735-4565-b533-393132613066__-__resize__504x__dsc_0931.jpg"/>
