--- a/room2.html
+++ b/room2.html
@@ -1307,7 +1307,7 @@
             </div>
             <div class="t-section__container t-container">
                 <div class="t-col t-col_12">
-                    <div class="t-section__bottomwrapper t-clear t-align_center "><a href="/contacts" target=""
+                    <div class="t-section__bottomwrapper t-clear t-align_center "><a href="contacts.html" target=""
                                                                                      class="t-btn t-btn_md"
                                                                                      style="color:#ffffff;background-color:#47a76a;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;">
                         <table style="width:100%; height:100%;">
